feat: add speed and attack mechanics across creature classes