@@ -1,15 +1,15 @@
 package Simulation.entity.Animal;
 
-import Simulation.Coordinates;
+
 import Simulation.Map;
 import Simulation.Search;
 import Simulation.entity.Entity;
 
 public class Predator extends Creature {
-    public Predator(int id) {
+    public Predator(int speed, int attack) {
         super.setSkin("\uD83D\uDC3A");
-        this.id = id;
-
+        this.speed = speed;
+        this.attack = attack;
     }
 
     Search search = new Search();
@@ -29,13 +29,15 @@ public class Predator extends Creature {
         search.clear();
         search.runSearch(this.coordinates, this); // если только начали искать еду первый раз
 
-        if(search.pathToFood.isEmpty()){
+        if(search.pathToFood.isEmpty() && search.grass.isEmpty()){ // если все пусто
             Search.breakk.add(1);
             return;
         }
 
+        if(search.pathToFood.isEmpty()){ // если путь пустой
+            return;
+        }
 
-        Map.step(this.coordinates, search.pathToFood.get(0), this);
-        this.coordinates = search.pathToFood.get(0);
+        Map.step(this.coordinates, search.pathToFood.getFirst(), this);
     }
 }
